@startuml LearNteach
entity Users {
    username : varchar <PK>
    --
    email : varchar
    password : varchar
    name : varchar
    picture : varchar
}

entity Communities {
    id : int <PK>
    course : uuid <FK>
    --
    name : varchar
    type : enum('local', 'global')
}

object Chats {
    id : int <PK>
    user : varchar <FK>
    community : int <FK>
    --
    chat : varchar
    chat_date : datetime
}

entity Instructors {
    username : varchar <PK>
    --
    document : varchar
    balance : int
    approved : enum('yes', 'no')
    bio : varchar
    rating : int
}

entity Courses {
    id : uuid <PK>
    instructor : varchar <FK>
    --
    title : varchar
    description : varchar
    rating : int
    members : int
    preview : varchar
    price : int
    createdAt : datetime
    updatedAt : datetime
    meet_link : varchar
    meet_time : time
    meet_day : varchar
}

object Wishlists {
    id : int <PK>
    user : varchar <FK>
    course : uuid <FK>
}

object Carts {
    id : int <PK>
    user : varchar <FK>
    course : uuid <FK>
}

object Transactions {
    id : int <PK>
    user : varchar <FK>
    course : uuid <FK>
    --
    course_title : varchar
    user_name : varchar
    instructor_name : varchar
    course_price : int
    price : int
    discount_percentage : int
    discount : int
    tax : int
    total : int
    transaction_date : datetime
}

object EnrolledCourses {
    id : int <PK>
    user : varchar <FK>
    course : uuid <FK>
    --
    completed_contents : varchar
    rating : int
}

entity Contents {
    id : uuid <PK>
    course : uuid <FK>
    --
    label : varchar
    approved : enum('yes', 'no')
    created_at : date
    video : varchar
}

Users }o-- Wishlists
Wishlists --o{ Courses

Users }o-- EnrolledCourses
EnrolledCourses --o{ Courses

Users }o-- Carts
Carts --o{ Courses

Users }o-- Transactions
Transactions --o{ Courses

Courses }o--|| Contents
note on link
    has
end note

Users -- Instructors
note on link
    ISA
end note

Instructors }o--|| Courses
note on link
    has
end note

Courses ||--|| Communities
note on link
    has
end note

Users }o-- Chats
Chats --o{ Communities

@enduml